# spektra

./: Cargo.toml  README.md  README.zh-TW.md
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: release.sh
src/: audio.rs  export.rs  main.rs  palette.rs  pipeline.rs
